# CarbonBlend

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  co2_spec.py  discovery.py  export_terminal.py  facility.py  field.py  pipeline.py  processing_option.py  processing_plant.py  scenario.py  storage_site.py  tariff.py
backend/app/routers/: co2.py  decision.py  export.py  fields.py  infrastructure.py  markets.py  network.py  optimization.py  scenarios.py  tariffs.py  umm.py  uncertainty_router.py
backend/app/seed/: co2_reference.json  cost_reference.json  market_reference.json  tariff_reference.json
backend/app/services/: co2_blending.py  decision_support.py  hub_balance.py  market_pricing.py  network_builder.py  npd_client.py  optimizer.py  report_builder.py  risk_register.py  tariff_calculator.py  umm_client.py  uncertainty.py
backend/data/: carbonblend.db
backend/scripts/: ingest_factmaps.py  ingest_npd.py  ingest_umm.py
backend/tests/: conftest.py  test_api.py  test_co2_blending.py  test_decision_support.py  test_tariff_calculator.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useFields.ts  useNetwork.ts  useOptimization.ts  useScenario.ts
frontend/src/stores/: scenarioStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: field.ts  index.ts  infrastructure.ts  scenario.ts
(+39 files in other folders)
