[project]
name = "carbonblend-backend"
version = "0.1.0"
description = "Backend for CarbonBlend – exploring high-CO2 gas field integration into Gassco/Gassled pipeline infrastructure on the Norwegian Continental Shelf"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "networkx>=3.3",
    "pulp>=2.8",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pyproj>=3.6.0",
    "feedparser>=6.0.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "eval-type-backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
